--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = cbm80amiga/ST7789 AVR@^1.2.1
+lib_deps = 
+	cbm80amiga/ST7789 AVR@^1.2.1
+	adafruit/Adafruit GFX Library@^1.12.1
