--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/RREFont"]
 	path = lib/RREFont
 	url = https://github.com/cbm80amiga/RREFont.git
+[submodule "lib/serial"]
+	path = lib/serial
+	url = https://github.com/PowerBroker2/SerialTransfer.git
